msa/mmp/athn/k8s/500-mmp-athn-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: athn
  labels:
    app: athn
    version: 1.0.0
    release: mmp
spec:
  #type: NodePort
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
  #clusterIP: None
  selector:
    app: athn
