msa/mmp/athn/k8s/700-mmp-athn-serviceentry-kmc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: athn-kmc
  labels:
    app: athn
    version: 1.0.0
    release: mmp
spec:
  hosts:
  - "*.kmcert.com"
  - "kmcert.com"
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  location: MESH_EXTERNAL
  resolution: NONE
